@@ -4,6 +4,9 @@ Changelog
 1.0b4 - Unreleased
 ------------------
 
+* Avoid using brains when getting all objects from the catalog for sync runs.
+  [witsch]
+
 * Prefix output from maintenance views with a time-stamp.
   [witsch]
 
